--- a/city/team/index.html
+++ b/city/team/index.html
@@ -30,7 +30,7 @@
                 </p>
             </div>
             <div class="reseaux">
-                <div class="cv"><a target="_blank" href="https://etudiant.u-pem.fr/~dlancea/cv_danie/cv.html">cv</a></div>
+                <div class="cv"><a target="_blank" href="cv/cv_danie.pdf">cv</a></div>
                 <a target="_blank" href="https://www.linkedin.com/in/danie-lanc%C3%A9a-4538891b8/"><img src="images/logos/linkedin.png" alt="LinkedIn"></a>
             </div>
         </div>
@@ -44,7 +44,7 @@
                 </p>
             </div>
             <div class="reseaux">
-                <div  class="cv"><a target="_blank" href="https://etudiant.u-pem.fr/~cviry/page/">cv</a></div>
+                <div  class="cv"><a target="_blank" href="cv/cv_corentin.pdf">cv</a></div>
                 <a target="_blank" href="https://www.linkedin.com/in/corentin-viry-066341212/"><img src="images/logos/linkedin.png" alt="LinkedIn"></a>
             </div>
         </div>
@@ -69,7 +69,7 @@
                 </p>
             </div>
             <div class="reseaux">
-                <div class="cv"><a target="_blank" href="https://etudiant.u-pem.fr/~tiachim/">cv</a></div>
+                <div class="cv"><a target="_blank" href="cv/cv_timotei.pdf">cv</a></div>
                 <a target="_blank" href="https://www.linkedin.com/in/timotei-iachim-7b73b41a2/"><img src="images/logos/linkedin.png" alt="LinkedIn"></a>
             </div>
         </div>
@@ -83,7 +83,7 @@
                 </p>
             </div>
             <div class="reseaux">
-                <div  class="cv"><a class="cv" target="_blank" href="https://etudiant.u-pem.fr/~lnguye23/cv/">cv</a></div>
+                <div  class="cv"><a class="cv" target="_blank" href="cv/cv_nguyen_lea.pdf">cv</a></div>
                 <a target="_blank" href="https://www.linkedin.com/in/l%C3%A9a-nguyen-0500491bb/"><img src="images/logos/linkedin.png" alt="LinkedIn"></a>
             </div>
         </div>
@@ -95,11 +95,11 @@
                 <h1>Danie Lancéa</h1>
                 <p>
                     The famous project manager and front-end developer&nbsp;! <br>
-                    <a target="_blank" href="cv_danie.pdf">CV format pdf</a>
+                    <a target="_blank" href="cv/cv_danie.pdf">CV format pdf</a>
                 </p>
             </div>
             <div class="reseaux">
-                <div class="cv"><a target="_blank" href="https://etudiant.u-pem.fr/~dlancea/cv_danie/cv.html">cv</a></div>
+                <div class="cv"><a target="_blank" href="cv/cv_danie.pdf">cv</a></div>
                 <a target="_blank" href="https://www.linkedin.com/in/danie-lanc%C3%A9a-4538891b8/"><img src="images/logos/linkedin.png" alt="LinkedIn"></a>
             </div>
         </div>
@@ -109,11 +109,11 @@
                 <h1>Corentin Viry</h1>
                 <p>
                     Our talented digital designer&nbsp;!<br>
-                    <a target="_blank" href="">CV format pdf</a>
+                    <a target="_blank" href="cv/cv_corentin.pdf">CV format pdf</a>
                 </p>
             </div>
             <div class="reseaux">
-                <div  class="cv"><a target="_blank" href="https://etudiant.u-pem.fr/~cviry/page/#home">cv</a></div>
+                <div  class="cv"><a target="_blank" href="cv/cv_corentin.pdf">cv</a></div>
                 <a target="_blank" href="https://www.linkedin.com/in/corentin-viry-066341212/"><img src="images/logos/linkedin.png" alt="LinkedIn"></a>
             </div>
         </div>
@@ -134,11 +134,11 @@
                 <h1>Timotei Iachim</h1>
                 <p>
                     The eagle-eyed videographer and editor&nbsp;!<br>
-                    <a target="_blank" href="cv_timotei.pdf">CV format pdf</a>
+                    <a target="_blank" href="cv/cv_timotei.pdf">CV format pdf</a>
                 </p>
             </div>
             <div class="reseaux">
-                <div class="cv"><a target="_blank" href="https://etudiant.u-pem.fr/~tiachim/">cv</a></div>
+                <div class="cv"><a target="_blank" href="cv/cv_timotei.pdf">cv</a></div>
                 <a target="_blank" href="https://www.linkedin.com/in/timotei-iachim-7b73b41a2/"><img src="images/logos/linkedin.png" alt="LinkedIn"></a>
             </div>
         </div>
@@ -148,11 +148,11 @@
                 <h1>Léa Nguyen</h1>
                 <p>
                     The super mega full-stack developer&nbsp;!<br>
-                    <a target="_blank" href="">CV format pdf</a>
+                    <a target="_blank" href="cv/cv_nguyen_lea.pdf">CV format pdf</a>
                 </p>
             </div>
             <div class="reseaux">
-                <div  class="cv"><a class="cv" target="_blank" href="https://etudiant.u-pem.fr/~lnguye23/cv/">cv</a></div>
+                <div  class="cv"><a class="cv" target="_blank" href="cv/cv_nguyen_lea.pdf">cv</a></div>
                 <a target="_blank" href="https://www.linkedin.com/in/l%C3%A9a-nguyen-0500491bb/"><img src="images/logos/linkedin.png" alt="LinkedIn"></a>
             </div>
         </div>
