--- a/city/formulaire/index.html
+++ b/city/formulaire/index.html
@@ -42,7 +42,7 @@
             <div class="form">
                 <h2>CONTACT US&nbsp;!</h2>
 
-                <form action="envoi.php" method="post">
+                <form method="post">
 
                     <div class="inputBox">
                         <input type="email" id="email" name="email" placeholder="Email" required>
@@ -55,7 +55,7 @@
                     </div>
 
                     <div class="inputBox">
-                        <input id="button" type="submit" name="envoyer" value="Submit">
+                        <input id="button" type="submit" name="envoyer" value="Submit" disabled>
                     </div>
 
                 </form> 
